# elfinfo

./: .gitignore  AGENT.md  CLAUDE.md  README.md  ROADMAP.md  install.sh  pyproject.toml
elfinfo/: __init__.py  __main__.py  cpp.py  disasm.py  dynamic.py  frida_gen.py  frida_repair.py  identity.py  info.py  layout.py  parser.py  relocations.py  render.py  resolve.py  search.py  show.py  strings.py  symbols.py  versioning.py  vtable.py
