[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "elfinfo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyelftools"]

[project.scripts]
elfinfo = "elfinfo.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["elfinfo*"]
